--- a/HRMS/Views/Attendance/PunchINPunchOut.cshtml
+++ b/HRMS/Views/Attendance/PunchINPunchOut.cshtml
@@ -42,6 +42,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <!--<div class="container ">
     <div class="row text-center">
         <div class="col-12 col-md-12">
