--- a/HRMS/Views/Shared/_Layout.cshtml
+++ b/HRMS/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <div class="col-auto px-0">
-                <div id="sidebar" class="collapse collapse-horizontal border-end">
+                <div id="sidebar" class="collapse collapse-horizontal border-end show">
                     <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
 
                         <a href="#" class="d-flex align-items-center pb-3 p-3 mb-md-0 me-md-auto text-decoration-none">
@@ -63,7 +63,7 @@
                                         <li>
                                             <a href="/Master/DesignationsMaster" class="nav-link px-0"> <span class=" d-sm-inline">Designations Master</span> </a>
                                         </li>
-                                <li>
+                                        <li>
                                             <a href="/Master/DepartmentMaster" class="nav-link px-0"> <span class=" d-sm-inline">Department Master</span> </a>
                                         </li>
                                         <li>
@@ -98,19 +98,20 @@
                                 </li>*@
                         </ul>
                         <hr>
+
                         <div class="dropdown pb-3">
                             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
                                 <span class=" d-sm-inline mx-1">loser</span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                                <li><a class="dropdown-item" href="#">New project...</a></li>
+
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li><a class="dropdown-item" href="#">Profile</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="/Auth/login">Sign out</a></li>
                             </ul>
                         </div>
 
@@ -119,42 +120,42 @@
                 </div>
             </div>
             @*<main class="col ps-md-2 pt-2">*@
-            
-        <main role="main" class="col ps-md-2 pt-2">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    @*<a class="navbar-brand" href="#">
-                    <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"></i>
-                    <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i> <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>
 
-                </a>*@
-                    <a href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" class="border rounded-3 p-1 mb-1 text-decoration-none"><i class="fa-solid fa-bars fa-2xl"></i></a>
+            <main role="main" class="col ps-md-2 pt-2">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                        @*<a class="navbar-brand" href="#">
+                                <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"></i>
+                                <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i> <i class="fa-solid fa-bars fa-2xl" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <h3>Rishi Technovision</h3>
-                            </li>
+                            </a>*@
+                        <a href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" class="border rounded-3 p-1 mb-1 text-decoration-none"><i class="fa-solid fa-bars fa-2xl"></i></a>
 
-                        </ul>
-                        <form class="d-flex  ">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <h3>Rishi Technovision</h3>
+                                </li>
 
-                            <button class="border-0" asp-area="" asp-controller="Auth" asp-action="login"><i class="fas fa-sign-out-alt fa-lg" style="color: #74C0FC;"></i> Log Out</button>
-                        </form>
+                            </ul>
+                            <form class="d-flex  ">
 
+                                <button class="border-0" asp-area="" asp-controller="Auth" asp-action="login"><i class="fas fa-sign-out-alt fa-lg" style="color: #74C0FC;"></i> Log Out</button>
+                            </form>
+
+                        </div>
                     </div>
-                </div>
-            </nav>
-            <div class="container mt-2">
-                @RenderBody()
-
-            </div>
-            <footer class="border-top footer text-muted ">
+                </nav>
                 <div class="container mt-2">
-                    &copy; 2025 - HRMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    @RenderBody()
+
                 </div>
-            </footer>
-        </main>
+                <footer class="border-top footer text-muted ">
+                    <div class="container mt-2">
+                        &copy; 2025 - HRMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </div>
+                </footer>
+            </main>
 
 
             @*</main>*@
